# carma-utils

./: .gitignore  README.md
.circleci/: config.yml
.sonarqube/: sonar-scanner.properties
bsm_helper/: CMakeLists.txt  package.xml
bsm_helper/include/: BSMHelper.h
bsm_helper/include/bsm_helper/: bsm_helper.h
bsm_helper/src/: bsm_helper.cpp
bsm_helper/test/: main.cpp  test_bsm_helper.cpp
carma_launch_testing/: README.md  package.xml  setup.cfg  setup.py
carma_launch_testing/carma_launch_testing/: exceptions.py  predicates.py  spinning.py  transitions.py
carma_ros2_utils/: .clang-tidy  CMakeLists.txt  README.md  package.xml
carma_ros2_utils/carma_ros2_utils/launch/: generate_log_levels.py
carma_ros2_utils/include/carma_ros2_utils/: carma_lifecycle_node.hpp  carma_node.hpp  carma_ros2_utils.hpp  lifecycle_component_wrapper.hpp  plugin_interface.hpp
carma_ros2_utils/include/carma_ros2_utils/component_manager/: lifecycle_component_wrapper.cpp  lifecycle_component_wrapper.hpp
carma_ros2_utils/include/carma_ros2_utils/containers/: containers.hpp
carma_ros2_utils/include/carma_ros2_utils/internal/: carma_lifecycle_node.tpp
carma_ros2_utils/include/carma_ros2_utils/testing/: TestHelpers.hpp
carma_ros2_utils/include/carma_ros2_utils/timers/: ROSTimer.h  ROSTimer.hpp  ROSTimerFactory.h  ROSTimerFactory.hpp  TimerFactory.h  TimerFactory.hpp
carma_ros2_utils/include/carma_ros2_utils/timers/testing/: TestClock.hpp  TestTimer.h  TestTimer.hpp  TestTimerFactory.h  TestTimerFactory.hpp
carma_ros2_utils/src/: CMakeLists.txt  carma_lifecycle_node.cpp  carma_node.cpp  component_manager.cpp  lifecycle_component_wrapper.cpp  lifecycle_component_wrapper_st.cpp  publish_events.cpp
carma_ros2_utils/src/timers/: ROSTimer.cpp  ROSTimerFactory.cpp
carma_ros2_utils/src/timers/testing/: TestClock.cpp  TestTimer.cpp  TestTimerFactory.cpp
carma_ros2_utils/test/: CMakeLists.txt  launch_test_lifecycle_wrapper.py  test_carma_lifecycle_exceptions.cpp  test_lifecycle_manager.cpp  test_node.cpp
carma_ros2_utils/test/containers/: containers_test.cpp
carma_ros2_utils/test/timers/: TestingTimers.cpp
cav_driver_utils/: CMakeLists.txt  package.xml
cav_driver_utils/include/cav_driver_utils/: active_robotic_status_provider.h  enable_robotic_service.h  longitudinal_effort_controller.h  longitudinal_speed_controller.h
cav_driver_utils/include/cav_driver_utils/driver_application/: driver_application.h
cav_driver_utils/include/cav_driver_utils/driver_wrapper/: driver_wrapper.h
cav_driver_utils/include/driver_wrapper/: driver_wrapper.h
cav_driver_utils/src/driver_application/: driver_application.cpp
cav_driver_utils/src/driver_wrapper/: driver_wrapper.cpp
cav_driver_utils/src/socketcan_interface/: socketcan_interface.cpp
driver_shutdown/: CMakeLists.txt  package.xml
driver_shutdown/include/: driver_shutdown.h
driver_shutdown/launch/: driver_shutdown.launch
driver_shutdown/src/: driver_shutdown.cpp  main.cpp
minimal_test/: CMakeLists.txt  package.xml
minimal_test/include/minimal_test/: minimal_test.h
motion_predict/: CMakeLists.txt  README.md  package.xml
motion_predict/include/: motion_predict.h  predict_ctrv.h
motion_predict/include/motion_predict/: motion_predict.h  motion_predict.hpp  predict_ctrv.h  predict_ctrv.hpp
motion_predict/src/: main.cpp  motion_predict.cpp  predict_ctrv.cpp
motion_predict/test/: main.cpp  test_motion_predict.cpp  test_predict_ctrv.cpp
motion_predict_ros2/: CMakeLists.txt  package.xml
motion_predict_ros2/include/motion_predict_ros2/: motion_predict.hpp  predict_ctrv.hpp
motion_predict_ros2/src/: motion_predict.cpp  predict_ctrv.cpp
rapidjson/: CMakeLists.txt  README.md  package.xml
ros2_lifecycle_manager/: CMakeLists.txt  README.md  dependencies.cmake  package.xml
ros2_lifecycle_manager/include/ros2_lifecycle_manager/: lifecycle_manager_interface.hpp  ros2_lifecycle_manager.hpp  ros2_lifecycle_utils.hpp
ros2_lifecycle_manager/src/: ros2_lifecycle_manager.cpp
ros2_lifecycle_manager/test/: test_lifecycle_manager.cpp
sigpack/: CMakeLists.txt  NOTICE.md  README.md  install_deps.bash  package.xml
sigpack/demo_c++/: Makefile  sp_demo_101.cpp  sp_demo_102.cpp  sp_demo_103_1.cpp  sp_demo_103_2.cpp  sp_demo_104_1.cpp  sp_demo_106_1.cpp  sp_demo_107_1.cpp  sp_demo_107_2.cpp  sp_demo_108_1.cpp  sp_demo_111.cpp  sp_demo_112.cpp  test.par
sigpack/demo_matlab/: run_demo_101.m  run_demo_102.m  sp_test_101.cpp  sp_test_102.cpp
sigpack/include/sigpack/: sigpack.h
sigpack/include/sigpack/base/: base.h
sigpack/include/sigpack/fftw/: fftw.h
sigpack/include/sigpack/filter/: filter.h
sigpack/include/sigpack/gplot/: gplot.h
sigpack/include/sigpack/image/: image.h
sigpack/include/sigpack/kalman/: kalman.h
sigpack/include/sigpack/parser/: parser.h
sigpack/include/sigpack/resampling/: resampling.h
sigpack/include/sigpack/spectrum/: spectrum.h
sigpack/include/sigpack/timing/: timing.h
sigpack/include/sigpack/window/: window.h
sigpack/test/: Makefile  test_adapt.cpp  test_fft.cpp  test_filt.cpp  test_gplot.cpp  test_image.cpp  test_kalman.cpp  test_spect.cpp  test_window.cpp
trajectory_utils/: CMakeLists.txt  package.xml
trajectory_utils/include/trajectory_utils/: quintic_coefficient_calculator.h  trajectory_utils.h
trajectory_utils/include/trajectory_utils/conversions/: conversions.h
trajectory_utils/src/trajectory_utils/: quintic_coefficient_calculator.cpp  trajectory_utils.cpp  trajectroy_utils.cpp
trajectory_utils/src/trajectory_utils/conversions/: conversions.cpp
trajectory_utils/test/trajectory_utils/: quintic_coefficient_calculator_test.cpp  test_conversions.cpp  test_trajectory_utils.cpp
uncertainty_tools/: CMakeLists.txt  package.xml
uncertainty_tools/include/uncertainty_tools/: uncertainty_tools.h
uncertainty_tools/src/uncertainty_tools/: uncertainty_tools.cpp
uncertainty_tools/test/uncertainty_tools/: uncertainty_tools_test.cpp
wgs84_utils/: CMakeLists.txt  package.xml
wgs84_utils/src/wgs84_utils/: proj_tools.cpp
wgs84_utils/test/: proj_tools_test.cpp  test_main.cpp
(+315 files in other folders)
