<?xml version="1.0"?>
<package format="3">
  <name>bsm_helper</name>
  <version>1.0.0</version>
  <description>The bsm_helper package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache2</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
