<?xml version="1.0"?>

<!--
Copyright 2023 Leidos

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<package format="3">
  <name>carma_launch_testing</name>
  <version>0.1.0</version>
  <description>Supplemental launch_testing functions</description>

  <maintainer email="carma@dot.gov">carma</maintainer>

  <license>Apache 2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>ament_index_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
