<?xml version="1.0"?>
<package format = "3">
  <name>minimal_test</name>
  <version>1.0.6</version>
  <description>Common CAV Platform driver utilities</description>
  <maintainer email="support@torcrobotics.com">Torc Robotics</maintainer>
  <license>BSD</license>
  <author email="watters@torcrobotics.com">Thomas Watters</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cav_driver_utils</depend>

  <export>
  </export>
</package>
